tests/conformance/negative/20-contract-duplicate-fields.sml
<!-- Error: duplicate field names at the same nesting level are invalid -->
<skill define="contract" name="duplicate-fields">
  <field name="title" type="string" />
  <field name="title" type="string" />
</skill>
